[workspace]
resolver = "2"
members = [
    "crates/rpc_surgeon",
]

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha3 = "0.10"
anyhow = "1.0"
dotenvy = "0.15"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
panic = "deny"
