[package]
name = "flashbots_arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true}
dotenvy = {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
serde_json = {workspace = true}

[lints]
workspace = true
