[package]
name = "flashbots_arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true}
dotenvy = {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
serde_json = {workspace = true}
chrono = "0.4.43"
reqwest.workspace = true
serde.workspace = true
rand = "0.9.2"
hex.workspace = true
sha3.workspace = true
clap.workspace = true

[lints]
workspace = true
